# OneDay_Framework

./: .augment-guidelines  .clang-format  .gitignore  CLAUDE.md  CLAUDE_ANALYSIS.md  CMakeLists.txt  PERFORMANCE_INSTALL_GUIDE.md  README.md  SETUP_GUIDE.md  VCPKG_TROUBLESHOOTING.md  VSCODE_SETUP_GUIDE.md  check_environment.ps1  compile_now.ps1  install_dependencies.ps1  quick_build.ps1  setup_github.ps1  vcpkg.json
.augment/rules/: rule-feedback.md  rule1.md
.bmad-core/: install-manifest.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: BUILD_VERIFICATION_REPORT.md  CI_CD_GUIDE.md  CI_CD_TROUBLESHOOTING.md  CODE_QUALITY_BASELINE.md  ENCODING_GUIDE.md  GITHUB_SETUP_GUIDE.md  architecture.md  brief.md  front-end-spec.md  fullstack-architecture.md  prd.md  ui-architecture.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: checklist-results-report.md  epic-1-核心蓝图系统-mvp.md  epic-list-mvp优化版.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/gates/: 1.1-基础架构.yml
docs/stories/: 1.1.story.md  1.2.story.md
memory-bank/: activeContext.md  developmentPlan.md  developmentPlan_v2.md  planSummary.md  progress.md  projectbrief.md  quick_reference.md  symbols.md  systemPatterns.md  taskChecklist.md  techContext.md
scripts/: check_vs_path.ps1  detect_vs_path.ps1
src/: main.cpp
src/core/: CMakeLists.txt
src/core/ai/: onnx_model.cpp  onnx_model.h
src/core/blueprint/: data_types.cpp  data_types.h  engine.cpp  engine.h  execution_context.cpp  execution_context.h  graph.cpp  graph.h
src/core/blueprint/nodes/: base_node.cpp  base_node.h  control_flow_nodes.cpp  control_flow_nodes.h  logic_nodes.cpp  logic_nodes.h  math_nodes.cpp  math_nodes.h  variable_nodes.cpp  variable_nodes.h
src/core/common/: config.cpp  config.h  encoding_utils.cpp  encoding_utils.h  encoding_utils_broken.cpp  encoding_utils_old.cpp  logger.cpp  logger.h  parallel_utils.cpp  parallel_utils.h  utils.cpp  utils.h  utils_old.cpp
src/core/game/: input_simulator.cpp  input_simulator.h  screen_capture.cpp  screen_capture.h  window_manager.cpp  window_manager.h
src/core/image/: opencv_wrapper.cpp  opencv_wrapper.h  processor.cpp  processor.h
src/core/pathfinding/: astar.cpp  astar.h  geometry_utils.cpp  geometry_utils.h  map.cpp  map.h  pathplanner.cpp  pathplanner.h
src/ui/: CMakeLists.txt  main_window.cpp  main_window.h
src/ui/canvas/: blueprint_node.cpp  blueprint_node.h  infinite_canvas.cpp  infinite_canvas.h  node_property.cpp  node_property.h
src/ui/editors/: blueprint_editor.cpp  blueprint_editor.h  blueprint_editor_window.cpp  blueprint_editor_window.h  blueprint_editor_window_minimal.cpp  blueprint_editor_window_minimal.h  map_editor.cpp  map_editor.h  node_palette.cpp  node_palette.h  property_panel.cpp  property_panel.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  blueprint_integration_test.cpp
tests/performance/: CMakeLists.txt  blueprint_performance_test.cpp
tests/unit/: CMakeLists.txt  encoding_utils_test.cpp  simple_test.cpp
tests/unit/core/ai/: onnx_model_test.cpp
tests/unit/core/blueprint/: engine_test.cpp  graph_test.cpp
tests/unit/core/common/: config_test.cpp  logger_test.cpp  parallel_utils_test.cpp
tests/unit/core/pathfinding/: geometry_utils_test.cpp
